--- a/i18n/de.json
+++ b/i18n/de.json
@@ -9,19 +9,20 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
   "UIKit.DateInput.labelRange": "bis",
   "UIKit.DateTimeInput.labelRange": "bis",
-  "UIKit.LocalizedMultilineTextInput.collapse": "",
-  "UIKit.LocalizedMultilineTextInput.expand": "",
-  "UIKit.LocalizedMultilineTextInput.hide": "",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "",
-  "UIKit.LocalizedMultilineTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "",
-  "UIKit.LocalizedTextInput.expand": "",
-  "UIKit.LocalizedTextInput.missingRequiredField": "",
+  "UIKit.LocalizedMultilineTextInput.collapse": "Verbergen",
+  "UIKit.LocalizedMultilineTextInput.expand": "Anzeigen",
+  "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
+  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.LocalizedMultilineTextInput.show": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
+  "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyInput.chevronLabel": "Dropdown öffnen/schliessen",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.TextField.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.TimeInput.labelRange": "",
   "UIKit.TimeRangePicker.from": "Von",
   "UIKit.TimeRangePicker.to": "Bis"
