break: use touched instead of isTouched for all fields (#97)
* feat: use touched for NumberField

This was previously called isTouched. We call it touched now to have a consistent prop name for all fields. Some fields might accept objects as 'touched'  and then 'isTouched'  would not make sense anymore.

* feat: use touched for TextField

This was previously called isTouched. We call it touched now to have a consistent prop name for all fields. Some fields might accept objects as 'touched'  and then 'isTouched'  would not make sense anymore.

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,31 +1,31 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.CreatableSelectInput.createLabel": "",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.DateInput.labelRange": "",
-  "UIKit.DateTimeInput.labelRange": "",
-  "UIKit.FieldErrors.invalidFractionalNumber": "",
-  "UIKit.FieldErrors.invalidNegativeNumber": "",
-  "UIKit.FieldErrors.missingRequiredField": "",
-  "UIKit.LocalizedMultilineTextInput.collapse": "",
-  "UIKit.LocalizedMultilineTextInput.expand": "",
-  "UIKit.LocalizedMultilineTextInput.hide": "",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "",
-  "UIKit.LocalizedMultilineTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "",
-  "UIKit.LocalizedTextInput.expand": "",
-  "UIKit.LocalizedTextInput.missingRequiredField": "",
-  "UIKit.MoneyInput.chevronLabel": "",
-  "UIKit.MultilineTextInput.collapse": "",
-  "UIKit.MultilineTextInput.expand": "",
-  "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.TimeInput.labelRange": "",
-  "UIKit.TimeRangePicker.from": "",
-  "UIKit.TimeRangePicker.to": ""
+  "UIKit.AsyncCreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
+  "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
+  "UIKit.DateInput.labelRange": "hasta",
+  "UIKit.DateTimeInput.labelRange": "hasta",
+  "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
+  "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
+  "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.LocalizedMultilineTextInput.collapse": "Contraer",
+  "UIKit.LocalizedMultilineTextInput.expand": "Expandir",
+  "UIKit.LocalizedMultilineTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.LocalizedMultilineTextInput.show": "Mostrar todos los lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.MoneyInput.chevronLabel": "Abrir/Cerrar menú desplegable",
+  "UIKit.MultilineTextInput.collapse": "Contraer",
+  "UIKit.MultilineTextInput.expand": "Expandir",
+  "UIKit.SelectInput.noOptionsMessageWithInputValue": "Menú vacío",
+  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
+  "UIKit.TimeInput.labelRange": "hasta",
+  "UIKit.TimeRangePicker.from": "Desde",
+  "UIKit.TimeRangePicker.to": "hasta"
 }
