--- a/i18n/de.json
+++ b/i18n/de.json
@@ -20,6 +20,7 @@
   "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.MoneyField.highPrecision": "",
   "UIKit.MoneyInput.chevronLabel": "Dropdown öffnen/schliessen",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
