--- a/i18n/es.json
+++ b/i18n/es.json
@@ -20,6 +20,7 @@
   "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.MoneyField.highPrecision": "",
   "UIKit.MoneyInput.chevronLabel": "Abrir/Cerrar menú desplegable",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
