feat(date-input): enable typing & displaying of date in locale

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -7,7 +7,15 @@
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.DateInput.labelRange": "to",
+  "UIKit.DateInput.lastDay": "[Yesterday], Do MMM YYYY",
+  "UIKit.DateInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
+  "UIKit.DateInput.nextDay": "[Tomorrow], Do MMM YYYY",
+  "UIKit.DateInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
+  "UIKit.DateInput.sameDay": "[Today], Do MMM YYYY",
+  "UIKit.DateInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateInput.today": "Today",
+  "UIKit.DateInput.tomorrow": "Tomorrow",
+  "UIKit.DateInput.yesterday": "Yesterday",
   "UIKit.DateTimeInput.labelRange": "to",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
