--- a/i18n/de.json
+++ b/i18n/de.json
@@ -7,7 +7,15 @@
   "UIKit.CreatableSelectInput.createLabel": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.DateInput.labelRange": "bis",
+  "UIKit.DateInput.lastDay": "[Gestern], Do MMM YYYY",
+  "UIKit.DateInput.lastWeek": "[Letzten] dddd (Do MMM YYYY)",
+  "UIKit.DateInput.nextDay": "[Morgen], Do MMM YYYY",
+  "UIKit.DateInput.nextWeek": "[Kommenden] dddd (Do MMM YYYY)",
+  "UIKit.DateInput.sameDay": "[Heute], Do MMM YYYY",
+  "UIKit.DateInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateInput.today": "Heute",
+  "UIKit.DateInput.tomorrow": "Morgen",
+  "UIKit.DateInput.yesterday": "Gestern",
   "UIKit.DateTimeInput.labelRange": "bis",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
