--- a/i18n/es.json
+++ b/i18n/es.json
@@ -7,7 +7,15 @@
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
-  "UIKit.DateInput.labelRange": "hasta",
+  "UIKit.DateInput.lastDay": "",
+  "UIKit.DateInput.lastWeek": "",
+  "UIKit.DateInput.nextDay": "",
+  "UIKit.DateInput.nextWeek": "",
+  "UIKit.DateInput.sameDay": "",
+  "UIKit.DateInput.sameElse": "",
+  "UIKit.DateInput.today": "",
+  "UIKit.DateInput.tomorrow": "",
+  "UIKit.DateInput.yesterday": "",
   "UIKit.DateTimeInput.labelRange": "hasta",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
