feat(date-range-input): add suggestions

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -16,6 +16,15 @@
   "UIKit.DateInput.today": "Today",
   "UIKit.DateInput.tomorrow": "Tomorrow",
   "UIKit.DateInput.yesterday": "Yesterday",
+  "UIKit.DateRangeInput.lastDay": "[Yesterday], Do MMM YYYY",
+  "UIKit.DateRangeInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
+  "UIKit.DateRangeInput.nextDay": "[Tomorrow], Do MMM YYYY",
+  "UIKit.DateRangeInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
+  "UIKit.DateRangeInput.sameDay": "[Today], Do MMM YYYY",
+  "UIKit.DateRangeInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateRangeInput.today": "Today",
+  "UIKit.DateRangeInput.tomorrow": "Tomorrow",
+  "UIKit.DateRangeInput.yesterday": "Yesterday",
   "UIKit.DateTimeInput.labelRange": "to",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
