--- a/i18n/de.json
+++ b/i18n/de.json
@@ -16,6 +16,15 @@
   "UIKit.DateInput.today": "Heute",
   "UIKit.DateInput.tomorrow": "Morgen",
   "UIKit.DateInput.yesterday": "Gestern",
+  "UIKit.DateRangeInput.lastDay": "[Gestern], Do MMM YYYY",
+  "UIKit.DateRangeInput.lastWeek": "[Letzten] dddd (Do MMM YYYY)",
+  "UIKit.DateRangeInput.nextDay": "[Morgen], Do MMM YYYY",
+  "UIKit.DateRangeInput.nextWeek": "[Kommenden] dddd (Do MMM YYYY)",
+  "UIKit.DateRangeInput.sameDay": "[Heute], Do MMM YYYY",
+  "UIKit.DateRangeInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateRangeInput.today": "Heute",
+  "UIKit.DateRangeInput.tomorrow": "Morgen",
+  "UIKit.DateRangeInput.yesterday": "Gestern",
   "UIKit.DateTimeInput.labelRange": "bis",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
