--- a/i18n/es.json
+++ b/i18n/es.json
@@ -16,6 +16,15 @@
   "UIKit.DateInput.today": "",
   "UIKit.DateInput.tomorrow": "",
   "UIKit.DateInput.yesterday": "",
+  "UIKit.DateRangeInput.lastDay": "",
+  "UIKit.DateRangeInput.lastWeek": "",
+  "UIKit.DateRangeInput.nextDay": "",
+  "UIKit.DateRangeInput.nextWeek": "",
+  "UIKit.DateRangeInput.sameDay": "",
+  "UIKit.DateRangeInput.sameElse": "",
+  "UIKit.DateRangeInput.today": "",
+  "UIKit.DateRangeInput.tomorrow": "",
+  "UIKit.DateRangeInput.yesterday": "",
   "UIKit.DateTimeInput.labelRange": "hasta",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
