--- a/i18n/es.json
+++ b/i18n/es.json
@@ -25,7 +25,15 @@
   "UIKit.DateRangeInput.today": "",
   "UIKit.DateRangeInput.tomorrow": "",
   "UIKit.DateRangeInput.yesterday": "",
-  "UIKit.DateTimeInput.labelRange": "hasta",
+  "UIKit.DateTimeInput.lastDay": "",
+  "UIKit.DateTimeInput.lastWeek": "",
+  "UIKit.DateTimeInput.nextDay": "",
+  "UIKit.DateTimeInput.nextWeek": "",
+  "UIKit.DateTimeInput.sameDay": "",
+  "UIKit.DateTimeInput.sameElse": "",
+  "UIKit.DateTimeInput.today": "",
+  "UIKit.DateTimeInput.tomorrow": "",
+  "UIKit.DateTimeInput.yesterday": "",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
