--- a/i18n/de.json
+++ b/i18n/de.json
@@ -25,7 +25,15 @@
   "UIKit.DateRangeInput.today": "Heute",
   "UIKit.DateRangeInput.tomorrow": "Morgen",
   "UIKit.DateRangeInput.yesterday": "Gestern",
-  "UIKit.DateTimeInput.labelRange": "bis",
+  "UIKit.DateTimeInput.lastDay": "[Gestern um] LT [Uhr]",
+  "UIKit.DateTimeInput.lastWeek": "[letzten] dddd, (Do MMM YYYY) [um] LT [Uhr]",
+  "UIKit.DateTimeInput.nextDay": "[Morgen um] LT [Uhr]",
+  "UIKit.DateTimeInput.nextWeek": "dddd [um] LT [Uhr]",
+  "UIKit.DateTimeInput.sameDay": "[Heute um] LT [Uhr]",
+  "UIKit.DateTimeInput.sameElse": "L [um] LT [Uhr]",
+  "UIKit.DateTimeInput.today": "Heute",
+  "UIKit.DateTimeInput.tomorrow": "Morgen",
+  "UIKit.DateTimeInput.yesterday": "Gestern",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
