--- a/i18n/en.json
+++ b/i18n/en.json
@@ -25,7 +25,15 @@
   "UIKit.DateRangeInput.today": "Today",
   "UIKit.DateRangeInput.tomorrow": "Tomorrow",
   "UIKit.DateRangeInput.yesterday": "Yesterday",
-  "UIKit.DateTimeInput.labelRange": "to",
+  "UIKit.DateTimeInput.lastDay": "[Yesterday], Do MMM YYYY",
+  "UIKit.DateTimeInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
+  "UIKit.DateTimeInput.nextDay": "[Tomorrow], Do MMM YYYY",
+  "UIKit.DateTimeInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
+  "UIKit.DateTimeInput.sameDay": "[Today], Do MMM YYYY",
+  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateTimeInput.today": "Today at",
+  "UIKit.DateTimeInput.tomorrow": "Tomorrow",
+  "UIKit.DateTimeInput.yesterday": "Yesterday",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
   "UIKit.FieldErrors.missingRequiredField": "This field is required. Provide a value.",
