feat(date-time-input): enable time input

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -25,13 +25,14 @@
   "UIKit.DateRangeInput.today": "Today",
   "UIKit.DateRangeInput.tomorrow": "Tomorrow",
   "UIKit.DateRangeInput.yesterday": "Yesterday",
-  "UIKit.DateTimeInput.lastDay": "[Yesterday], Do MMM YYYY",
-  "UIKit.DateTimeInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
-  "UIKit.DateTimeInput.nextDay": "[Tomorrow], Do MMM YYYY",
-  "UIKit.DateTimeInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
-  "UIKit.DateTimeInput.sameDay": "[Today], Do MMM YYYY",
-  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY",
-  "UIKit.DateTimeInput.today": "Today at",
+  "UIKit.DateTimeInput.lastDay": "[Yesterday at] LT",
+  "UIKit.DateTimeInput.lastWeek": "[Last] dddd, Do MMM YYYY [at] LT",
+  "UIKit.DateTimeInput.nextDay": "[Tomorrow at] LT",
+  "UIKit.DateTimeInput.nextWeek": "[Next] dddd, Do MMM YYYY [at] LT",
+  "UIKit.DateTimeInput.sameDay": "[Today at] LT",
+  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY [at] LT",
+  "UIKit.DateTimeInput.timePickerPlaceholder": "Time",
+  "UIKit.DateTimeInput.today": "Today",
   "UIKit.DateTimeInput.tomorrow": "Tomorrow",
   "UIKit.DateTimeInput.yesterday": "Yesterday",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
