--- a/i18n/de.json
+++ b/i18n/de.json
@@ -30,7 +30,8 @@
   "UIKit.DateTimeInput.nextDay": "[Morgen um] LT [Uhr]",
   "UIKit.DateTimeInput.nextWeek": "dddd [um] LT [Uhr]",
   "UIKit.DateTimeInput.sameDay": "[Heute um] LT [Uhr]",
-  "UIKit.DateTimeInput.sameElse": "L [um] LT [Uhr]",
+  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY [um] LT [Uhr]",
+  "UIKit.DateTimeInput.timePickerPlaceholder": "Zeit",
   "UIKit.DateTimeInput.today": "Heute",
   "UIKit.DateTimeInput.tomorrow": "Morgen",
   "UIKit.DateTimeInput.yesterday": "Gestern",
