--- a/i18n/es.json
+++ b/i18n/es.json
@@ -31,6 +31,7 @@
   "UIKit.DateTimeInput.nextWeek": "",
   "UIKit.DateTimeInput.sameDay": "",
   "UIKit.DateTimeInput.sameElse": "",
+  "UIKit.DateTimeInput.timePickerPlaceholder": "",
   "UIKit.DateTimeInput.today": "",
   "UIKit.DateTimeInput.tomorrow": "",
   "UIKit.DateTimeInput.yesterday": "",
