feat(date-time-input): enable typing date with time

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -25,10 +25,11 @@
   "UIKit.DateRangeInput.today": "Today",
   "UIKit.DateRangeInput.tomorrow": "Tomorrow",
   "UIKit.DateRangeInput.yesterday": "Yesterday",
+  "UIKit.DateTimeInput.dateTimeSeparators": "at |@",
   "UIKit.DateTimeInput.lastDay": "[Yesterday at] LT",
-  "UIKit.DateTimeInput.lastWeek": "[Last] dddd, (Do MMM YYYY) [at] LT",
+  "UIKit.DateTimeInput.lastWeek": "[Last] dddd, Do MMM YYYY [at] LT",
   "UIKit.DateTimeInput.nextDay": "[Tomorrow at] LT",
-  "UIKit.DateTimeInput.nextWeek": "[Next] dddd (Do MMM YYYY) [at] LT",
+  "UIKit.DateTimeInput.nextWeek": "[Next] dddd, Do MMM YYYY [at] LT",
   "UIKit.DateTimeInput.sameDay": "[Today at] LT",
   "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY [at] LT",
   "UIKit.DateTimeInput.timePickerPlaceholder": "Time (e.g. 3:15 pm)",
