chore(18n): update translations

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -7,31 +7,31 @@
   "UIKit.CreatableSelectInput.createLabel": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.DateInput.lastDay": "[Gestern], Do MMM YYYY",
-  "UIKit.DateInput.lastWeek": "[Letzten] dddd (Do MMM YYYY)",
-  "UIKit.DateInput.nextDay": "[Morgen], Do MMM YYYY",
-  "UIKit.DateInput.nextWeek": "[Kommenden] dddd (Do MMM YYYY)",
-  "UIKit.DateInput.sameDay": "[Heute], Do MMM YYYY",
-  "UIKit.DateInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateInput.lastDay": "[Gestern], L",
+  "UIKit.DateInput.lastWeek": "[Letzten] dddd (L)",
+  "UIKit.DateInput.nextDay": "[Morgen], L",
+  "UIKit.DateInput.nextWeek": "[Kommenden] dddd (L)",
+  "UIKit.DateInput.sameDay": "[Heute], L",
+  "UIKit.DateInput.sameElse": "LL",
   "UIKit.DateInput.today": "Heute",
   "UIKit.DateInput.tomorrow": "Morgen",
   "UIKit.DateInput.yesterday": "Gestern",
-  "UIKit.DateRangeInput.lastDay": "[Gestern], Do MMM YYYY",
-  "UIKit.DateRangeInput.lastWeek": "[Letzten] dddd (Do MMM YYYY)",
-  "UIKit.DateRangeInput.nextDay": "[Morgen], Do MMM YYYY",
-  "UIKit.DateRangeInput.nextWeek": "[Kommenden] dddd (Do MMM YYYY)",
-  "UIKit.DateRangeInput.sameDay": "[Heute], Do MMM YYYY",
-  "UIKit.DateRangeInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateRangeInput.lastDay": "[Gestern], L",
+  "UIKit.DateRangeInput.lastWeek": "[Letzten] dddd (L)",
+  "UIKit.DateRangeInput.nextDay": "[Morgen], L",
+  "UIKit.DateRangeInput.nextWeek": "[Kommenden] dddd (L)",
+  "UIKit.DateRangeInput.sameDay": "[Heute], L",
+  "UIKit.DateRangeInput.sameElse": "LL",
   "UIKit.DateRangeInput.today": "Heute",
   "UIKit.DateRangeInput.tomorrow": "Morgen",
   "UIKit.DateRangeInput.yesterday": "Gestern",
   "UIKit.DateTimeInput.dateTimeSeparators": " um |@",
   "UIKit.DateTimeInput.lastDay": "[Gestern um] LT [Uhr]",
-  "UIKit.DateTimeInput.lastWeek": "[Letzten] dddd, (Do MMM YYYY) [um] LT [Uhr]",
+  "UIKit.DateTimeInput.lastWeek": "[Letzten] dddd, (L) [um] LT [Uhr]",
   "UIKit.DateTimeInput.nextDay": "[Morgen um] LT [Uhr]",
   "UIKit.DateTimeInput.nextWeek": "dddd [um] LT [Uhr]",
   "UIKit.DateTimeInput.sameDay": "[Heute um] LT [Uhr]",
-  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY [um] LT [Uhr]",
+  "UIKit.DateTimeInput.sameElse": "LLL",
   "UIKit.DateTimeInput.timePickerPlaceholder": "Zeit",
   "UIKit.DateTimeInput.today": "Heute",
   "UIKit.DateTimeInput.tomorrow": "Morgen",
