--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,31 +7,31 @@
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.DateInput.lastDay": "[Yesterday], Do MMM YYYY",
-  "UIKit.DateInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
-  "UIKit.DateInput.nextDay": "[Tomorrow], Do MMM YYYY",
-  "UIKit.DateInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
-  "UIKit.DateInput.sameDay": "[Today], Do MMM YYYY",
-  "UIKit.DateInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateInput.lastDay": "[Yesterday], L",
+  "UIKit.DateInput.lastWeek": "[Last] dddd (L)",
+  "UIKit.DateInput.nextDay": "[Tomorrow], L",
+  "UIKit.DateInput.nextWeek": "[Next] dddd (L)",
+  "UIKit.DateInput.sameDay": "[Today], L",
+  "UIKit.DateInput.sameElse": "LL",
   "UIKit.DateInput.today": "Today",
   "UIKit.DateInput.tomorrow": "Tomorrow",
   "UIKit.DateInput.yesterday": "Yesterday",
-  "UIKit.DateRangeInput.lastDay": "[Yesterday], Do MMM YYYY",
-  "UIKit.DateRangeInput.lastWeek": "[Last] dddd (Do MMM YYYY)",
-  "UIKit.DateRangeInput.nextDay": "[Tomorrow], Do MMM YYYY",
-  "UIKit.DateRangeInput.nextWeek": "[Next] dddd (Do MMM YYYY)",
-  "UIKit.DateRangeInput.sameDay": "[Today], Do MMM YYYY",
-  "UIKit.DateRangeInput.sameElse": "Do MMMM YYYY",
+  "UIKit.DateRangeInput.lastDay": "[Yesterday], L",
+  "UIKit.DateRangeInput.lastWeek": "[Last] dddd (L)",
+  "UIKit.DateRangeInput.nextDay": "[Tomorrow], L",
+  "UIKit.DateRangeInput.nextWeek": "[Next] dddd (L)",
+  "UIKit.DateRangeInput.sameDay": "[Today], L",
+  "UIKit.DateRangeInput.sameElse": "LL",
   "UIKit.DateRangeInput.today": "Today",
   "UIKit.DateRangeInput.tomorrow": "Tomorrow",
   "UIKit.DateRangeInput.yesterday": "Yesterday",
   "UIKit.DateTimeInput.dateTimeSeparators": "at |@",
   "UIKit.DateTimeInput.lastDay": "[Yesterday at] LT",
-  "UIKit.DateTimeInput.lastWeek": "[Last] dddd, Do MMM YYYY [at] LT",
+  "UIKit.DateTimeInput.lastWeek": "[Last] dddd, L [at] LT",
   "UIKit.DateTimeInput.nextDay": "[Tomorrow at] LT",
-  "UIKit.DateTimeInput.nextWeek": "[Next] dddd, Do MMM YYYY [at] LT",
+  "UIKit.DateTimeInput.nextWeek": "[Next] dddd, L [at] LT",
   "UIKit.DateTimeInput.sameDay": "[Today at] LT",
-  "UIKit.DateTimeInput.sameElse": "Do MMMM YYYY [at] LT",
+  "UIKit.DateTimeInput.sameElse": "LLL",
   "UIKit.DateTimeInput.timePickerPlaceholder": "Time",
   "UIKit.DateTimeInput.today": "Today",
   "UIKit.DateTimeInput.tomorrow": "Tomorrow",
