--- a/i18n/es.json
+++ b/i18n/es.json
@@ -7,35 +7,35 @@
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
-  "UIKit.DateInput.lastDay": "",
-  "UIKit.DateInput.lastWeek": "",
-  "UIKit.DateInput.nextDay": "",
-  "UIKit.DateInput.nextWeek": "",
-  "UIKit.DateInput.sameDay": "",
-  "UIKit.DateInput.sameElse": "",
-  "UIKit.DateInput.today": "",
-  "UIKit.DateInput.tomorrow": "",
-  "UIKit.DateInput.yesterday": "",
-  "UIKit.DateRangeInput.lastDay": "",
-  "UIKit.DateRangeInput.lastWeek": "",
-  "UIKit.DateRangeInput.nextDay": "",
-  "UIKit.DateRangeInput.nextWeek": "",
-  "UIKit.DateRangeInput.sameDay": "",
-  "UIKit.DateRangeInput.sameElse": "",
-  "UIKit.DateRangeInput.today": "",
-  "UIKit.DateRangeInput.tomorrow": "",
-  "UIKit.DateRangeInput.yesterday": "",
-  "UIKit.DateTimeInput.dateTimeSeparators": "",
-  "UIKit.DateTimeInput.lastDay": "",
-  "UIKit.DateTimeInput.lastWeek": "",
-  "UIKit.DateTimeInput.nextDay": "",
-  "UIKit.DateTimeInput.nextWeek": "",
-  "UIKit.DateTimeInput.sameDay": "",
-  "UIKit.DateTimeInput.sameElse": "",
-  "UIKit.DateTimeInput.timePickerPlaceholder": "",
-  "UIKit.DateTimeInput.today": "",
-  "UIKit.DateTimeInput.tomorrow": "",
-  "UIKit.DateTimeInput.yesterday": "",
+  "UIKit.DateInput.lastDay": "[Ayer], L",
+  "UIKit.DateInput.lastWeek": "dddd [Pasado] (L)",
+  "UIKit.DateInput.nextDay": "[Mañana], L",
+  "UIKit.DateInput.nextWeek": "[Próximo] dddd (L)",
+  "UIKit.DateInput.sameDay": "[Hoy], L",
+  "UIKit.DateInput.sameElse": "LL",
+  "UIKit.DateInput.today": "Hoy",
+  "UIKit.DateInput.tomorrow": "Mañana",
+  "UIKit.DateInput.yesterday": "Ayer",
+  "UIKit.DateRangeInput.lastDay": "[Ayer], L",
+  "UIKit.DateRangeInput.lastWeek": "dddd [Pasado] (L)",
+  "UIKit.DateRangeInput.nextDay": "[Mañana], L",
+  "UIKit.DateRangeInput.nextWeek": "[Próximo] dddd (L)",
+  "UIKit.DateRangeInput.sameDay": "[Hoy], L",
+  "UIKit.DateRangeInput.sameElse": "LL",
+  "UIKit.DateRangeInput.today": "Hoy",
+  "UIKit.DateRangeInput.tomorrow": "Mañana",
+  "UIKit.DateRangeInput.yesterday": "Ayer",
+  "UIKit.DateTimeInput.dateTimeSeparators": "a las |@",
+  "UIKit.DateTimeInput.lastDay": "[Ayer a las] LT",
+  "UIKit.DateTimeInput.lastWeek": "dddd [Pasado], L [a las] LT",
+  "UIKit.DateTimeInput.nextDay": "[Mañana a las] LT",
+  "UIKit.DateTimeInput.nextWeek": "[Próximo] dddd, L [a las] LT",
+  "UIKit.DateTimeInput.sameDay": "[Hoy a las] LT",
+  "UIKit.DateTimeInput.sameElse": "LLL",
+  "UIKit.DateTimeInput.timePickerPlaceholder": "Hora",
+  "UIKit.DateTimeInput.today": "Hoy",
+  "UIKit.DateTimeInput.tomorrow": "Mañana",
+  "UIKit.DateTimeInput.yesterday": "Ayer",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
