--- a/i18n/de.json
+++ b/i18n/de.json
@@ -8,7 +8,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
   "UIKit.DateInput.labelRange": "bis",
+  "UIKit.DateInput.placeholder": "Datum wählen (DD.MM.YYYY)",
+  "UIKit.DateRangeInput.placeholder": "Zeitraum wäheln (DD.MM.YYYY - DD.MM.YYYY)",
   "UIKit.DateTimeInput.labelRange": "bis",
+  "UIKit.DateTimeInput.placeholder": "Zeitpunkt wählen (DD.MM.YYYY - HH:mm)",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
@@ -21,7 +24,6 @@
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.chevronLabel": "Dropdown öffnen/schliessen",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
