--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,7 +8,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.DateInput.labelRange": "to",
+  "UIKit.DateInput.placeholder": "Select date (MM/DD/YYYY)",
+  "UIKit.DateRangeInput.placeholder": "Select date range (MM/DD/YYYY - MM/DD/YYYY)",
   "UIKit.DateTimeInput.labelRange": "to",
+  "UIKit.DateTimeInput.placeholder": "Select date range (MM/DD/YYYY - HH:mm)",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
   "UIKit.FieldErrors.missingRequiredField": "This field is required. Provide a value.",
@@ -21,7 +24,6 @@
   "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.MoneyField.highPrecision": "High Precision Price",
-  "UIKit.MoneyInput.chevronLabel": "Open/Close Dropdown",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
