--- a/i18n/es.json
+++ b/i18n/es.json
@@ -8,7 +8,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.DateInput.labelRange": "hasta",
+  "UIKit.DateInput.placeholder": "",
+  "UIKit.DateRangeInput.placeholder": "",
   "UIKit.DateTimeInput.labelRange": "hasta",
+  "UIKit.DateTimeInput.placeholder": "",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
@@ -21,7 +24,6 @@
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
   "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.chevronLabel": "Abrir/Cerrar menú desplegable",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Menú vacío",
