feat(date-calendar): change inputs

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -8,10 +8,11 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
   "UIKit.DateInput.labelRange": "bis",
-  "UIKit.DateInput.placeholder": "Datum wählen (DD.MM.YYYY)",
-  "UIKit.DateRangeInput.placeholder": "Zeitraum wäheln (DD.MM.YYYY - DD.MM.YYYY)",
+  "UIKit.DateInput.placeholder": "DD.MM.YYYY",
+  "UIKit.DateRangeInput.placeholder": "HH:mm",
   "UIKit.DateTimeInput.labelRange": "bis",
-  "UIKit.DateTimeInput.placeholder": "Zeitpunkt wählen (DD.MM.YYYY - HH:mm)",
+  "UIKit.DateTimeInput.placeholder": "",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
