--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,10 +8,11 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.DateInput.labelRange": "to",
-  "UIKit.DateInput.placeholder": "Select date (MM/DD/YYYY)",
-  "UIKit.DateRangeInput.placeholder": "Select date range (MM/DD/YYYY - MM/DD/YYYY)",
+  "UIKit.DateInput.placeholder": "MM/DD/YYYY",
+  "UIKit.DateRangeInput.placeholder": "HH:mm AM/PM",
   "UIKit.DateTimeInput.labelRange": "to",
-  "UIKit.DateTimeInput.placeholder": "Select date range (MM/DD/YYYY - HH:mm)",
+  "UIKit.DateTimeInput.placeholder": "MM/DD/YYYY - HH:mm",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm AM/PM",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
   "UIKit.FieldErrors.missingRequiredField": "This field is required. Provide a value.",
