--- a/i18n/es.json
+++ b/i18n/es.json
@@ -8,10 +8,11 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.DateInput.labelRange": "hasta",
-  "UIKit.DateInput.placeholder": "",
-  "UIKit.DateRangeInput.placeholder": "",
+  "UIKit.DateInput.placeholder": "DD/MM/YYYY",
+  "UIKit.DateRangeInput.placeholder": "HH:mm",
   "UIKit.DateTimeInput.labelRange": "hasta",
   "UIKit.DateTimeInput.placeholder": "",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
