feat(date-input): redo with downshift

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -7,7 +7,7 @@
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.DateInput.labelRange": "to",
+  "UIKit.DateInput.placeholder": "MM/DD/YYYY",
   "UIKit.DateTimeInput.labelRange": "to",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
@@ -21,7 +21,6 @@
   "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.MoneyField.highPrecision": "High Precision Price",
-  "UIKit.MoneyInput.chevronLabel": "Open/Close Dropdown",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
