--- a/i18n/de.json
+++ b/i18n/de.json
@@ -7,7 +7,7 @@
   "UIKit.CreatableSelectInput.createLabel": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
-  "UIKit.DateInput.labelRange": "bis",
+  "UIKit.DateInput.placeholder": "DD.MM.YYYY",
   "UIKit.DateTimeInput.labelRange": "bis",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
@@ -21,7 +21,6 @@
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.chevronLabel": "Dropdown öffnen/schliessen",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
