feat(date-time-input): redo with downshift

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -8,7 +8,8 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.DateInput.placeholder": "MM/DD/YYYY",
-  "UIKit.DateTimeInput.labelRange": "to",
+  "UIKit.DateTimeInput.placeholder": "MM/DD/YYYY - HH:mm AM/PM",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm AM/PM",
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
   "UIKit.FieldErrors.missingRequiredField": "This field is required. Provide a value.",
