--- a/i18n/de.json
+++ b/i18n/de.json
@@ -8,7 +8,8 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
   "UIKit.DateInput.placeholder": "DD.MM.YYYY",
-  "UIKit.DateTimeInput.labelRange": "bis",
+  "UIKit.DateTimeInput.placeholder": "DD.MM.YYYY - HH:mm",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
