--- a/i18n/es.json
+++ b/i18n/es.json
@@ -8,7 +8,8 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.DateInput.placeholder": "DD/MM/YYYY",
-  "UIKit.DateTimeInput.labelRange": "hasta",
+  "UIKit.DateTimeInput.placeholder": "DD/MM/YYYY - HH:mm",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
